# M-Chess

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
engine/: Cargo.toml  Makefile.toml
engine/src/: .color.rs.swp  board.rs  color.rs  game.rs  lib.rs  messages.rs  piece.rs  position.rs  sharedenums.rs
engine/src/automation/: ai.rs
frontend/: Cargo.toml  Makefile.toml  Trunk.toml  index.html  style.css
frontend/src/: handlers.rs  lib.rs  main.rs  messages.rs  root.rs  routes.rs  sharedenums.rs  state.rs
frontend/src/app/: app.rs  mod.rs  root.rs  state.rs
frontend/src/app/pages/: create_game.rs  download.rs  game.rs  home.rs  info.rs  mod.rs  navbar.rs  not_found.rs
frontend/src/components/: app.rs  board.rs  mod.rs  navbar.rs  palette.rs
frontend/src/ws/: mod.rs  ws.rs
frontend/static/styles/: create_game.css  download.css  game.css  home.css  navbar.css  presentation.css
game_lib/: Cargo.toml  Makefile.toml
game_lib/src/: ai.rs  board.rs  game.rs  lib.rs  messages.rs  piece.rs  position.rs  sharedenums.rs
game_lib/src/automation/: ai.rs
game_lib/src/tests/t_game_lib/: .game.rs.swp  game.rs
lib/chess-back/: Cargo.toml
lib/chess-back/src/: Game.rs  game.rs  main.rs
lib/chess-back/src/components/: board.rs  mod.rs  piece.rs
m-chess/: Cargo.toml
m-chess/src/: main.rs
m-chess/web/: index.html
src/: .serverstate.rs.swp  handler.rs  lib.rs  main.rs  messages.rs  room.rs  serverstate.rs  sharedenums.rs  structures.rs  utils.rs
src/game_lib/: .board.rs.swp  .piece.rs.swp  Cargo.toml  ai.rs  board.rs  game.rs  mod.rs  piece.rs  position.rs
src/game_lib/ai/: ai.rs
src/game_lib/automation/: ai.rs
src/tests/: mod.rs
src/tests/t_game_lib/: game.rs
web/: Cargo.toml  index.html
web/src/: main.rs  sandbox.rs
