[package]
name = "m_chess"
version = "0.1.0"
edition = "2021"

[profile.test] # fixed
opt-level = 2

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
serde_json = "1.0.138"
game_lib = { path = "./game_lib" }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }

[workspace]
members = [
    "frontend",
    "game_lib",
]