[package]
name = "m_chess"
version = "0.1.0"
edition = "2021"

[profile.test] # fixed
opt-level = 2

[dependencies]
serde_json = "1.0.138"
serde = { version = "1.0", features = ["derive"] }
game_lib = { path = "./game_lib" }
tokio = { version = "1.45.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures = "0.3"
log = "0.4"
env_logger = "0.11.8"
wasm-bindgen = "0.2.100"
uuid ={ version = "1.3", features = ["v4","serde"] }
futures-util = "0.3"

[workspace]
members = [
    "frontend",
    "game_lib",
]

