[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
game_lib = { path = "../game_lib" }
web-sys = { version = "0.3", features = ["DragEvent"] }
serde ={ version = "1.0", features = ["derive"] }
serde_json = "1.0"