[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["DragEvent"] }
serde ={ version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"          # For SinkExt/StreamExt
gloo-net = { version = "0.6.0", features = ["websocket"] }  # For WebSocket support
wasm-bindgen-futures = "0.4"   # For spawn_local
log = "0.4.27"
console_log = "1.0.0"
console_error_panic_hook = "0.1" # Optional: For better panic messages in the console
uuid ={ version = "1.3", features = ["serde"] }
game_lib = { path = "../game_lib" }

[lib]
name = "frontend"
path = "src/lib.rs"