[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Yew + Wasm
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo = "0.11"   
gloo-net = "0.6.0"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde","js"] }
log = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location"] }
console_log = "1.0"
game_lib = {path = "../game_lib"}
gloo-utils = "0.2.0"
